--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-layouts": "^1.0.0",
     "express-validator": "^6.12.2",
+    "method-override": "^3.0.0",
     "mongoose": "^6.0.8"
   }
 }
