--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start" : "nodemon -e js, mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
